# manipulator

./: README.md
needs/: CMakeLists.txt  package.xml
needs/include/: needs.hpp
needs/src/: needs.cpp  test_mani_path.cpp
test_sub/: CMakeLists.txt  package.xml
test_sub/msg/: Float32Multi.msg
test_sub/src/: test_sub.cpp
